test/typecheck/pass/scattered_enum/v1.sail

scattered enum E

enum clause E = A
enum clause E = A
enum clause E = C
